feat(torneos): rediseñado la pantalla de busqueda de torneos, añadida paginación y creados filtros